openstack/sysconfig/iptables.save
# Generated by iptables-save v1.4.21 on Tue Dec 12 20:28:09 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:104]
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8042 -m comment --comment "001 aodh-api incoming aodh_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8777 -m comment --comment "001 ceilometer-api incoming ceilometer_api" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8041 -m comment --comment "001 gnocchi-api incoming gnocchi_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8004 -m comment --comment "001 heat incoming heat" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 horizon 80 incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6385 -m comment --comment "001 ironic-api incoming ironic-api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_192.168.69.84" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_192.168.69.84" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_192.168.69.84_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775,8778 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_192.168.69.84_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "001 swift proxy incoming swift_proxy" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_192.168.69.84" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_192.168.69.84" -j ACCEPT
COMMIT
# Completed on Tue Dec 12 20:28:09 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 20:28:09 2017
*raw
:PREROUTING ACCEPT [83474:20691697]
:OUTPUT ACCEPT [81050:8339460]
COMMIT
# Completed on Tue Dec 12 20:28:09 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 20:28:09 2017
*mangle
:PREROUTING ACCEPT [304360:37718964]
:INPUT ACCEPT [304360:37718964]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [301559:25348093]
:POSTROUTING ACCEPT [301559:25348093]
COMMIT
# Completed on Tue Dec 12 20:28:09 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 20:28:09 2017
*nat
:PREROUTING ACCEPT [1:328]
:INPUT ACCEPT [1:328]
:OUTPUT ACCEPT [13235:791133]
:POSTROUTING ACCEPT [13235:791133]
COMMIT
# Completed on Tue Dec 12 20:28:09 2017
